--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -30,7 +30,7 @@
   background-color: var(--primary-color);
 }
 .button-bg:hover {
-  background-color: rgba(30, 29, 29, 0.8); /* Use your --primary-color with 0.7 alpha */
+  background-color: #1e1d1dcc; /* Use your --primary-color with 0.7 alpha */
   transform: scale(1.1);
   transition: background-color 0.2s, transform 0.2s ease-in-out;
 }
